shared-cluster-demos/hello/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ing
  namespace: demo-hello
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - hello-demo.dev.cloud.org.gc.ca
  rules:
  - host: hello-demo.dev.cloud.org.gc.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 80
  ingressClassName: nginx
